SUBDIRS=

noinst_LIBRARIES=libQHEHilbertSpace.a

libQHEHilbertSpace_a_SOURCES=Fermions.cc \
BosonOnDisk.cc \
ParticleOnSphere.cc \
FermionOnSphere.cc \
BosonOnSphere.cc \
ParticleOnTorus.cc \
ParticleOnTorusWithMagneticTranslations.cc \
FermionOnTorus.cc \
FullFermionOnTorus.cc \
BosonOnTorus.cc \
ParticleOnTorusWithSpin.cc \
ParticleOnTorusWithSpinAndMagneticTranslations.cc \
FermionOnTorusWithSpin.cc \
FermionOnTorusWithMagneticTranslations.cc \
FermionOnTorusWithSpinAndMagneticTranslations.cc \
BosonOnTorusWithMagneticTranslations.cc \
BosonOnTorusState.cc \
FermionOnDisk.cc \
FermionOnSphereLongState.cc \
FermionOnDiskUnlimited.cc \
FermionOnSphereUnlimited.cc \
BosonOnSphereState.cc \
AbstractQHEParticle.cc \
ParticleOnSphereWithSpin.cc \
FermionOnSphereWithSpin.cc \
FermionOnSphereWithSpinSqueezedBasis.cc \
FermionOnSphereWithSpinSzProjection.cc \
FullBosonOnSphere.cc \
FermionOnSphereHaldaneBasis.cc \
FermionOnSphereHaldaneHugeBasis.cc \
ParticleOnSphereWithSU4Spin.cc \
FermionOnSphereWithSU4Spin.cc \
FermionOnSphereSymmetricBasis.cc \
FermionOnSphereHaldaneSymmetricBasis.cc \
FermionOnSphereWithSpinLzSzSymmetry.cc \
FermionOnSphereWithSpinSzSymmetry.cc \
FermionOnSphereWithSpinLzSymmetry.cc \
FermionOnSphereLong.cc \
FermionOnSphereHaldaneBasisLong.cc \
FermionOnSphereSymmetricBasisLong.cc \
FermionOnSphereHaldaneSymmetricBasisLong.cc \
BosonOnSphereSymmetricBasis.cc \
BosonOnSphereShort.cc \
BosonOnSphereSymmetricBasisShort.cc \
ParticleOnSphereWithSU3Spin.cc \
FermionOnSphereWithSU3Spin.cc \
FermionOnSphereWithSU3SpinTzSymmetry.cc \
FermionOnSphereWithSU3SpinZ3Symmetry.cc \
FermionOnSphereWithSU3SpinTzZ3Symmetry.cc \
FermionOnSphereWithSpinAllSz.cc \
FermionOnSphereWithSpinAllSzLzSymmetry.cc \
HardCoreBoson.cc \
ParticleOnLattice.cc \
BosonOnLattice.cc \
HardCoreBosonOnLattice.cc \
BosonOnLatticeKy.cc \
FermionOnDiskHaldaneBasis.cc \
FermionOnDiskLong.cc \
BosonOnDiskShort.cc \
BosonOnSphereHaldaneBasisShort.cc \
BosonOnDiskHaldaneBasisShort.cc \
FermionOnSphereWithSpinLong.cc \
FermionOnSphereWithSpinLzSzSymmetryLong.cc \
FermionOnSphereWithSpinLzSymmetryLong.cc \
FermionOnSphereWithSpinSzSymmetryLong.cc \
ParticleOnSphereManager.cc \
FermionOnLattice.cc \
FermionOnSphereUnnormalizedBasis.cc \
BosonOnSphereHaldaneHugeBasisShort.cc \
BosonOnSphereWithSpin.cc \
FermionOnSphereWithSpinHaldaneBasis.cc \
FermionOnSphereWithSpinHaldaneBasisLong.cc \
FermionOnSphereHaldaneLargeBasis.cc \
FermionOnSphereTwoLandauLevels.cc
