SUBDIRS=

noinst_LIBRARIES=libQHEArchitectureOperation.a

libQHEArchitectureOperation_a_SOURCES=QHEParticlePrecalculationOperation.cc \
QHEParticleWaveFunctionOperation.cc \
FQHEDiskQuasiholePropagatorOperation.cc \
FQHESphereJackGeneratorOperation.cc \
FQHESphereJastrowMultiplicationOperation.cc \
FQHESphereJastrowDivisionOperation.cc \
FQHESphereMonomialsTimesSlaterProjectionOperation.cc \
FQHESphereParticleEntanglementSpectrumOperation.cc \
FQHESphereJackGeneratorSumRationalPolynomialOperation.cc \
FQHESphereMultipleMonomialsTimesSlaterProjectionOperation.cc \
FQHETorusParticleEntanglementSpectrumOperation.cc \
FQHESphereMonomialsProductOperation.cc \
FQHELatticeParticleEntanglementSpectrumOperation.cc \
FQHESphereBosonicStateTimesPolarizedSlaterProjectionOperation.cc \
FQHESphereSymmetrizeU1U1StateOperation.cc \
FQHESphereBosonsWithSpinLandauLevelLiftOperation.cc \
FQHESquareLatticeSymmetrizeU1U1StateOperation.cc \
FQHELatticeFourierTransformOperation.cc \
FQHEMPSCreateStateOperation.cc \
FQHEMPSEvaluateCFTOperation.cc \
FQHETorusApplyCNRotationOperation.cc \
FQHETorusComputeMatrixElementOperation.cc \
FQHETorusSymmetrizeU1U1StateOperation.cc \
FQHESphereWithSpinApplyOneBodyTransformationOperation.cc \
FQHECylinderMultipleJackGeneratorOperation.cc \
FQHESphereWithSU2SpinVanDerMondeTimesSlaterOperation.cc \
QHEParticlePrecalculationOperationWithMatrixElements.cc \
FQHESphereParticleEntanglementMatrixOperation.cc \
FQHESphereBosonicStateTimesFermionicStateOperation.cc
