SUBDIRS=

noinst_LIBRARIES=libFQHEMonteCarlo.a

libFQHEMonteCarlo_a_SOURCES= AbstractMCSamplingFunction.cc \
LaughlinWithSpinSamplingFunction.cc \
QHESamplingFunctionManager.cc \
SimpleMonteCarloAlgorithm.cc \
AbstractObservable.cc \
AbstractBlockObservable.cc \
ParticleOnSphereCollection.cc \
ParticleOnDiskCollection.cc \
AbstractParticleCollection.cc \
SphereBilayerCoulombEnergy.cc \
LaughlinSamplingFunction.cc \
LaughlinSamplingFunctionOnDisk.cc \
HalperinSamplingFunction.cc \
SphereCoulombEnergy.cc \
TrivialSamplingFunction.cc \
SphereGeneralEnergy.cc \
SphereWithSpinGeneralEnergy.cc \
SimpleTwoBodyCorrelatorOnSphere.cc \
SimpleTwoBodyCorrelatorOnSphereBilayer.cc \
SimpleTwoBodyCorrelatorOnDisk.cc \
SimpleDensityOnDisk.cc \
BlockMonteCarloOnSphereAlgorithm.cc \
AbstractMCBlockSamplingFunction.cc \
AbstractMCBlockSamplingFunctionOnSphere.cc \
MRBlockSamplingFunction.cc \
SphereBlockCoulombEnergy.cc \
ParticleOnSphereCollectionSouthPole.cc \
ParticleOnSphereCollectionGauged.cc \
AbstractParticleCollectionOnSphere.cc \
AbstractMCSamplingFunctionOnSphere.cc \
AbstractMCSamplingFunctionOnDisk.cc \
StructureFactorOnSphere.cc

