SUBDIRS=

noinst_LIBRARIES=libQHESpectrum.a

libQHESpectrum_a_SOURCES=QHEOnSphereLzSortedSpectrum.cc \
MomentumMultipletSet.cc \
PseudoPotentials.cc \
AbstractZDensityProfile.cc \
InfiniteWellDensityProfile.cc \
FangHowardDensityProfile.cc \
PseudoPotentialGenerator.cc \
TabulatedDensityProfile.cc \
InfiniteWellBilayerDensityProfile.cc \
InfiniteWellMixedDensityProfile.cc \
TriangularWellEigenfunction.cc \
LatticePhases.cc 
#LatticePhasesWithSpin.cc
